--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 	"LugarNacimiento": "Acamixtla,Guerrero",
 	"Email": "arlette30neveros@gmail.com",
 	"Telefono": "9842569305",
-	"Resumen": "Soy una persona muy alegre, siempre ando sonriendo, busco ser feliz apesar de la vida de igual manera, actualmente soy estudiante en la Universidad tecnologica de la Rivera Maya, curso la carrera de TSU en Tecnologías de la Información, Área Desarrollo de Software Multiplataforma, para pagar mi universidad trabajo en las tardes en una tienda de abarrotes de mi zona... ",
+	"Resumen": "Soy una persona muy alegre, siempre ando sonriendo, busco ser feliz apesar de la vida de igual manera, actualmente soy estudiante  Universitario",
 	"PuestoSolicitado": "Ingeniero en Sistemas",
 
 	"Habilidades": [
